
Changelog
=========

1.1.1 (unreleased)
------------------

Nothing yet.

1.1 (2014-08-05)
----------------

- Adds new search & reserve feature. On each resource, users may search
  for allocations. Those allocations may be selected and reserved in compound.

  This is a big new feature and 1.1 is meant to be the canary for it. There
  are certain things which don't yet work: group reservations are kept out
  of the search, the compound reservations don't show up everywhere yet and
  there are rough edges in the UI.

  If you are not absolutely sure you need this release we therefore recommend
  to wait for a week or two. We'll deliver 1.1.1 which will be a more stable
  and more widely adapted release.

- Hide the timeframes selection in the allocation and search form, inside
  an icon close to the dates.
  [href]

- Make sure following the documentation under Ubuntu 14.04 works and clarify
  some things. Fixes #159.
  [href]

- Remove resource description from thankyou-page.
  [href]

1.0.24 (2014-07-16)
-------------------

- Adds the ability to define green/orange/red thresholds in the controlpanel.
  Fixes #158.
  [href]

- Adds the ability to view formdata that cannot be written anymore. This can
  happen if the custom forms are changed after the data has been written.
  Fixes #150.
  [href]

- Limits the width of the day view, to improve the accessibility of the menu.
  Fixes #157.
  [href]

- Adds a fast way to switch to another view from the allocation menu. Fixes #153.
  [href]

- Exceptions occurring in forms now include the correct stacktrace.
  [href]

- Export filenames now include the year and the month. Fixes #155.
  [href]

- Adds shading (avilability indicator) to the calendar legend. Fixes #154.
  [href]

1.0.23 (2014-06-23)
-------------------

- Adds unicode check/cross marks for approve/deny/revoke, to increase legibility.
  [href]

- Adds thank-you page shown after submitting a reservation. Each resource